devops-projects/techshop-v1/k8s/monitoring/zabbix/zabbix-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix
  labels:
    app: zabbix
    env: dev
