devops-projects/techshop-v1/k8s/monitoring/zabbix/zabbix-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zabbix-postgres
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-postgres
  template:
    metadata:
      labels:
        app: zabbix-postgres
    spec:
      containers:
      - name: zabbix-postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - zabbix
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - zabbix
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        volumeMounts:
        - name: zabbix-postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: zabbix-postgres-data
        persistentVolumeClaim:
          claimName: zabbix-postgres-pvc
