devops-projects/techshop-v1/k8s/monitoring/zabbix/zabbix-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-postgres-svc
  namespace: zabbix
spec:
  type: ClusterIP
  selector:
    app: zabbix-postgres
  ports:
    - port: 5432
      targetPort: 5432
