devops-projects/techshop-v1/k8s/monitoring/zabbix/zabbix-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-svc
  namespace: monitoring
spec:
  selector:
    app: zabbix-server
  ports:
  - name: zabbix-server-port
    port: 10051
    targetPort: 10051
  type: ClusterIP
