devops-projects/techshop-v1/k8s/monitoring/zabbix/zabbix-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-svc
  namespace: zabbix
spec:
  selector:
    app: zabbix-server
  ports:
  - name: zabbix-server-port
    port: 10051
    targetPort: 10051
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-agent-svc
  namespace: zabbix
spec:
  selector:
    app: zabbix-agent
  ports:
  - name: zabbix-agent-port
    port: 10050
    targetPort: 10050
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web-svc
  namespace: zabbix
spec:
  selector:
    app: zabbix-web
  ports:
  - name: zabbix-web-port
    port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: zabbix-postgres-svc
  namespace: zabbix
spec:
  selector:
    app: zabbix-postgres
  ports:
  - name: zabbix-postgres-port
    port: 5432
    targetPort: 5432
  type: ClusterIP
