devops-projects/techshop-v1/k8s/monitoring/zabbix/zabbix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-ingress
  namespace: monitoring
spec:
  rules:
  - host: zabbix.techshop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zabbix-web-svc
            port:
              number: 80
